# docir

./: Cargo.toml  README.md  ROADMAP.md  deny.toml
.githooks/: pre-commit
crates/docir-app/: Cargo.toml
crates/docir-app/src/: adapters.rs  artifacts.rs  bucket_count.rs  config.rs  container.rs  export.rs  extract_flash.rs  extract_links.rs  inspect_directory.rs  inspect_sectors.rs  inspect_sheet_records.rs  inspect_slide_records.rs  inventory.rs  io_support.rs  lib.rs  list_times.rs  metadata.rs  ports.rs  probe.rs  report_indicators.rs  severity.rs  summary.rs  test_support.rs  use_cases.rs  vba.rs
crates/docir-app/src/artifacts/: classify.rs  helpers.rs  legacy_cfb.rs  mod.rs  ole.rs  ooxml.rs  rtf.rs  tests.rs
crates/docir-app/src/export/: mod.rs  tests.rs
crates/docir-app/src/inspect_directory/: anomaly.rs  classify.rs  mod.rs  references.rs  statistics.rs  tests.rs  types.rs
crates/docir-app/src/inspect_directory/tests/: annotate_incoming_refs.rs  bucket_counts.rs  mod.rs
crates/docir-app/src/inspect_sectors/: anomalies.rs  counts.rs  health.rs  mod.rs  tests.rs  types.rs
crates/docir-app/src/report_indicators/: cfb_structural.rs  embedding_indicators.rs  helpers.rs  macro_indicators.rs  mod.rs  tests.rs
crates/docir-app/src/vba/: mod.rs  tests.rs
crates/docir-cli/: Cargo.toml
crates/docir-cli/src/: cli.rs  main.rs  parser_config.rs  test_support.rs
crates/docir-cli/src/commands/: coverage.rs  diff.rs  dispatch.rs  dispatch_extract.rs  dispatch_inspect.rs  dispatch_query.rs  dump_container.rs  dump_node.rs  extract.rs  extract_artifacts.rs  extract_flash.rs  extract_links.rs  extract_vba.rs  grep.rs  inspect_directory.rs  inspect_metadata.rs  inspect_sectors.rs  inspect_sheet_records.rs  inspect_slide_records.rs  inventory.rs  list_times.rs  manifest.rs  mod.rs  parse.rs  probe_format.rs  query.rs  recognize_vba.rs  report_indicators.rs  rules.rs  security.rs  select.rs  summary.rs  util.rs
crates/docir-cli/tests/: command_paths.rs  coverage_export.rs  diff_rules.rs  summary_security_commands.rs
crates/docir-diff/: Cargo.toml
crates/docir-diff/src/: index.rs  index_intrinsic.rs  lib.rs  summary.rs
crates/docir-diff/src/summary/: presentation.rs  spreadsheet.rs  summary_normalize.rs  summary_parse.rs  summary_postprocess.rs  summary_tests.rs
crates/docir-diff/tests/: diff_engine_integration.rs
crates/docir-parser/: Cargo.toml
crates/docir-parser/src/: adapters.rs  config.rs  diagnostics.rs  error.rs  format.rs  input.rs  legacy_office.rs  lib.rs  ole.rs  ole_header.rs  parse_utils.rs  parser.rs  ppt_records.rs  registry_utils.rs  security_scan.rs  security_utils.rs  test_support.rs  text_utils.rs  xls_records.rs  xml_utils.rs  zip_handler.rs
crates/docir-parser/src/hwp/: builder.rs  builder_hwp.rs  builder_hwpx.rs  helpers.rs  io.rs  legacy.rs  mod.rs  part_registry.rs  section.rs  security.rs  styles.rs
crates/docir-parser/src/hwp/section/: section_normalize.rs  section_parse.rs  section_parse_events.rs  section_parse_notes.rs  section_parse_revisions.rs  section_postprocess.rs  section_tests.rs
crates/docir-parser/src/odf/: builder.rs  container.rs  formula.rs  formula_parse_utils.rs  helpers.rs  io.rs  limits.rs  manifest.rs  mod.rs  ods.rs  paragraph.rs  presentation.rs  presentation_helpers.rs  presentation_helpers_frame.rs  presentation_helpers_utils.rs  sampling.rs  security.rs  security_helpers.rs  spreadsheet.rs  spreadsheet_chunks.rs  styles_support.rs  styles_support_headers_footers.rs  styles_support_styles.rs  tests.rs  tests_prelude.rs  text.rs  utils.rs
crates/docir-parser/src/odf/helpers/: helpers_normalize.rs  helpers_parse.rs  helpers_parse_events.rs  helpers_parse_events_changes.rs  helpers_parse_events_tables.rs  helpers_parse_rows.rs  helpers_postprocess.rs  helpers_tests.rs
crates/docir-parser/src/odf/ods/: ods_normalize.rs  ods_parse.rs  ods_postprocess.rs  ods_tests.rs
crates/docir-parser/src/odf/spreadsheet/: spreadsheet_frame.rs  spreadsheet_normalize.rs  spreadsheet_parse.rs  spreadsheet_pivot.rs  spreadsheet_postprocess.rs  spreadsheet_tests.rs
crates/docir-parser/src/odf/tests/: security_indicators.rs  threat_indicators.rs
crates/docir-parser/src/ole/: directory.rs  mod.rs  stream.rs  tests.rs  types.rs
crates/docir-parser/src/ooxml/: content_types.rs  mod.rs  part_registry.rs  part_utils.rs  pptx.rs  relationships.rs  shape_parse.rs  shared.rs  xlsx.rs  xml_utils.rs
crates/docir-parser/src/ooxml/docx/: document.rs  field.rs  mod.rs
crates/docir-parser/src/ooxml/part_registry/: mod.rs  presentation.rs  spreadsheet.rs  word.rs
crates/docir-parser/src/ooxml/pptx/: builder.rs  comments.rs  graphic_frame.rs  graphic_frame_support.rs  metadata.rs  presentation_parts.rs  relationships.rs  shapes.rs  slide.rs  tests.rs  text.rs  transform.rs
crates/docir-parser/src/parser/: analysis.rs  contracts.rs  coverage.rs  document.rs  formats.rs  metadata.rs  ooxml.rs  ooxml_docx_parts.rs  parser_docx.rs  parser_pptx.rs  parser_xlsx.rs  post_process.rs  security.rs  shared_parts.rs  tests.rs  types.rs  utils.rs  vba.rs  vba_scanner.rs
crates/docir-parser/src/rtf/: core.rs  mod.rs  objects.rs  parser.rs  tests.rs
crates/docir-parser/tests/: document_dispatch.rs  error_and_adapters.rs  fixtures.rs  odf_branches.rs  ooxml_post_process.rs  security_scan.rs  xlsb.rs
crates/docir-python/: Cargo.toml
crates/docir-python/src/: lib.rs
crates/docir-rules/: Cargo.toml
crates/docir-rules/src/: engine.rs  lib.rs  profile.rs  rules.rs  tests.rs
crates/docir-rules/src/rules/: burst.rs  security_formula.rs  security_presence.rs  structure.rs  support.rs
crates/docir-rules/tests/: rule_engine_integration.rs
crates/docir-security/: Cargo.toml
crates/docir-security/src/: analyzer.rs  enrich.rs  hash.rs  indicators.rs  lib.rs  policy.rs  vba.rs
crates/docir-security/src/enrich/: dde.rs  helpers.rs  xlm.rs
crates/docir-serialization/: Cargo.toml
crates/docir-serialization/src/: json.rs  lib.rs
(+338 files in other folders)
