[package]
name = "docir-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Application layer for docir workflows"

[features]
test-support = []

[dependencies]
docir-core = { workspace = true }
docir-parser = { workspace = true }
docir-security = { workspace = true }
docir-serialization = { workspace = true }
docir-diff = { workspace = true }
docir-rules = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
zip = { workspace = true }
