[package]
name = "docir-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI for docir"

[[bin]]
name = "docir"
path = "src/main.rs"

[dependencies]
docir-core = { workspace = true }
docir-app = { workspace = true }
docir-security = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
