[package]
name = "docir-diff"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Diff engine for docir IR"

[dependencies]
docir-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
docir-parser = { workspace = true }
zip = { workspace = true }
