[package]
name = "docir-parser"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "OOXML parser for docir"

[dependencies]
docir-core = { workspace = true }
zip = { workspace = true }
quick-xml = { workspace = true }
encoding_rs = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
sha2 = { workspace = true }
flate2 = "1.0"
calamine = { workspace = true }
sha1 = { workspace = true }
pbkdf2 = { workspace = true }
base64 = { workspace = true }
aes = { workspace = true }
cbc = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
docir-security = { workspace = true }
