[package]
name = "docir-security"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Security analysis for docir"

[dependencies]
docir-core = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
