[package]
name = "docir-serialization"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "IR serialization for docir"

[dependencies]
docir-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
